update gitpod yml

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -8,6 +8,5 @@ ports:
 
 # List the start up tasks. You can start them in parallel in multiple terminals. See https://www.gitpod.io/docs/config-start-tasks/
 tasks:
-  - init: echo 'installing dependencies' # runs during prebuild
-    command: composer install
+  - init: composer install
     command: composer test
