--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,12 @@
 {
   "require": {
-    "phpunit/phpunit-selenium": "*",
-    "facebook/webdriver": "dev-master"
+    "phpunit/phpunit-selenium": "^7.0.0",
+    "php-webdriver/webdriver": "dev-main"
   },
-  "scripts": {   
-    "single": "vendor\\bin\\phpunit tests\\LambdaTest.php", 
-    "parallel": "vendor\\bin\\phpunit tests\\LambdaTestParallel.php"
+  "scripts": {
+    "test": "composer single  && composer parallel",
+    "single": "vendor/bin/phpunit tests/LambdaTest.php", 
+    "parallel": "vendor/bin/phpunit tests/LambdaTestParallel.php"
   },
   "autoload": {
     "classmap": ["lib/"]
